--- a/.jlatexmkrc
+++ b/.jlatexmkrc
@@ -1,6 +1,7 @@
+#!/usr/bin/perl
 $latex = 'platex %O %S';
-$dvipdf = 'dvipdfmx %O -o %D %S';
+$dvipdf = 'dvipdfmx -f ~/Library/jfontmaps/maps/hiragino-pron/ptex-hiragino-pron.map %O -o %D %S';
 $pdf_mode = 3;
-$bibtex = 'pbibtex';
+$bibtex = 'pbibtex %O %B';
 $bibtex_use = 2;
 $pdf_previewer = 'okular --unique';
