--- a/roles/rust/tasks/main.yml
+++ b/roles/rust/tasks/main.yml
@@ -24,41 +24,29 @@
 - name: Download installer
   get_url:
     url: "{{ rust_url }}"
-    dest: "{{ ansible_env.HOME }}/envs/rust/"
+    dest: "{{ rust_file_prefix }}/"
     checksum: "sha256:d36634bd8df3d7565487b70af03dfda1c43c635cd6f2993f47cd61fda00d890a"
   when: (rustc.stat.exists == False) or is_latest|failed
 - name: Check if the older installer exists
   stat:
-    path: "{{ ansible_env.HOME }}/envs/rust/{{ rust_url | basename | replace('.tar.gz', '') }}"
+    path: "{{ rust_file_prefix }}/{{ rust_url | basename | replace('.tar.gz', '') }}"
   register: old_installer
   when: (rustc.stat.exists == False) or is_latest|failed
 - name: Delete the older installer
   file:
-    path: "{{ ansible_env.HOME }}/envs/rust/{{ rust_url | basename | replace('.tar.gz', '') }}"
+    path: "{{ rust_file_prefix }}/{{ rust_url | basename | replace('.tar.gz', '') }}"
     state: absent
   when: ((rustc.stat.exists == False) or is_latest|failed) and old_installer.stat.exists == True
 - name: Extract installer
   unarchive:
-    src: "{{ ansible_env.HOME }}/envs/rust/{{ rust_url | basename }}"
-    dest: "{{ ansible_env.HOME }}/envs/rust"
+    src: "{{ rust_file_prefix }}/{{ rust_url | basename }}"
+    dest: "{{ rust_file_prefix }}"
     copy: no
   when: (rustc.stat.exists == False) or is_latest|failed
 - name: Install Rust
   shell: bash install.sh --prefix={{ rust_install_prefix }}
   args:
-    chdir: "{{ ansible_env.HOME }}/envs/rust/{{ rust_url | basename | replace('.tar.gz', '') }}"
+    chdir: "{{ rust_file_prefix }}/{{ rust_url | basename | replace('.tar.gz', '') }}"
   become: yes
   when: (rustc.stat.exists == False) or is_latest|failed
-- name: Add RUST_HOME in "~/.profile"
-  lineinfile:
-    dest: ~/.profile
-    state: present
-    line: "export RUST_HOME={{ rust_install_prefix }}"
-  when: rustc.stat.exists == False
-- name: Edit PATH in "~/.profile"
-  lineinfile:
-    dest: "{{ ansible_env.HOME }}/.profile"
-    state: present
-    line: "export PATH=$RUST_HOME/bin:$PATH"
-  when: rustc.stat.exists == False
 ...
