Update playbooks for TeX Live

--- a/roles/sbt/ubuntu/tasks/main.yml
+++ b/roles/sbt/ubuntu/tasks/main.yml
@@ -19,7 +19,7 @@
     id: 642AC823
   become: yes
   when: sbt|failed
-- name: Install Java
+- name: Install sbt
   apt:
     pkg: sbt
     state: latest
