--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,12 @@
 unbind C-a
 unbind C-b
+
 set -g prefix C-y
 set -s escape-time 0
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set-option -g status-position top
