Update tmux & powerline

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,3 +10,9 @@ bind k select-pane -U
 bind l select-pane -R
 
 set-option -g status-position top
+set -g status-fg colour15
+set -g status-bg colour92
+set -g status-left ' #P |'
+set -g status-right '#H '
+set-window-option -g window-status-format " #I"
+set-window-option -g window-status-current-format "#[bold] *#I"
