--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind '"' split-window -h -c "#{pane_current_path}"
-bind '%' split-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind '%' split-window -h -c "#{pane_current_path}"
 
 set-option -g status-position top
 set -g status-fg colour15
