--- a/tmux.conf
+++ b/tmux.conf
@@ -17,5 +17,5 @@ set -g status-fg colour15
 set -g status-bg colour54
 set -g status-left ' #P |'
 set -g status-right '#H '
-set-window-option -g window-status-format " #I"
-set-window-option -g window-status-current-format "#[bold] *#I"
+set-window-option -g window-status-format " #I #W"
+set-window-option -g window-status-current-format "#[bold] *#I #W"
