--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -74,7 +74,7 @@
 	<key>NSWindow Frame NSNavPanelAutosaveName</key>
 	<string>320 321 799 448 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>-958 980 1914 977 -958 900 1920 1057 </string>
+	<string>-321 900 1920 1057 -958 900 1920 1057 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -227,7 +227,7 @@
 				<real>1</real>
 			</dict>
 			<key>BM Growl</key>
-			<true/>
+			<false/>
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
@@ -685,7 +685,7 @@
 			<key>Shortcut</key>
 			<string></string>
 			<key>Silence Bell</key>
-			<false/>
+			<true/>
 			<key>Sync Title</key>
 			<false/>
 			<key>Tags</key>
@@ -709,7 +709,7 @@
 			<key>Vertical Spacing</key>
 			<real>1</real>
 			<key>Visual Bell</key>
-			<true/>
+			<false/>
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
@@ -729,14 +729,14 @@
 	<key>NoSyncFrame_SharedPreferences</key>
 	<dict>
 		<key>screenFrame</key>
-		<string>{{0, 0}, {1440, 900}}</string>
+		<string>{{-958, 900}, {1920, 1080}}</string>
 		<key>topLeft</key>
-		<string>{303, 877}</string>
+		<string>{-370, 1645}</string>
 	</dict>
 	<key>NoSyncInstallationId</key>
 	<string>BFC56975-EFDB-42F1-9660-8C8F719FDAFA</string>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>44</integer>
+	<integer>105</integer>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -1447,6 +1447,8 @@
 	</dict>
 	<key>NoSyncTipOfTheDayEligibilityBeganTime</key>
 	<real>593752077.27972305</real>
+	<key>PMPrintingExpandedStateForPrint2</key>
+	<false/>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -1482,6 +1484,8 @@
 	</dict>
 	<key>PrefsCustomFolder</key>
 	<string>/Users/kirito/envs</string>
+	<key>Print In Black And White</key>
+	<true/>
 	<key>RightCommand</key>
 	<integer>8</integer>
 	<key>SUEnableAutomaticChecks</key>
@@ -1498,6 +1502,8 @@
 	<false/>
 	<key>VisualIndicatorForEsc</key>
 	<false/>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>iTerm Version</key>
 	<string>3.3.6</string>
 </dict>
