--- a/tmux.conf
+++ b/tmux.conf
@@ -19,3 +19,6 @@ set -g status-left ' #P |'
 set -g status-right '#H '
 set-window-option -g window-status-format " #I #W"
 set-window-option -g window-status-current-format "#[bold] *#I #W"
+
+set -g pane-border-style "fg=cyan"
+set -g pane-active-border-style "bg=default fg=cyan"
