--- a/config/starship.toml
+++ b/config/starship.toml
@@ -7,8 +7,11 @@ show_always = true
 [directory]
 truncate_to_repo = false
 
-[nodejs]
-symbol = "nodejs "
-
 [cmd_duration]
 disabled = true
+
+[aws]
+disabled = true
+
+[nodejs]
+symbol = "nodejs "
