Fix strange behavior of tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
 unbind C-a
 unbind C-b
 
+# set -s escape-time 0
+set -sg escape-time 50
 set -g prefix C-y
-set -s escape-time 0
 
 bind h select-pane -L
 bind j select-pane -D
